--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,10 @@ page_list:
       url: /about
   - page:
       name: Ministries
-      url: /ministries			
+      url: /ministries
+  - page:
+      name: Videos
+      url: /videos      
 
 sass:
   sass_dir: _sass
