Update Header Title

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: mail@kadosh.cc
 instagram_username: kadoshhamburg
 youtube_channel: UCcbO8CuIzSQ9LkVAISLmRPw
 description: >- # Is there more to life than thus?
-  Under Construction
+  Kadosh Hamburg
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 google_analytics: #UA-174490331-2
